[gd_scene load_steps=25 format=3 uid="uid://8eb8kikl7wie"]

[ext_resource type="Texture2D" uid="uid://psu3e83tj4ug" path="res://asset/2d/ui/pause/pets/pet_button.png" id="1_52on1"]
[ext_resource type="Script" path="res://script/ui/pause_menu/pet_button.gd" id="1_heebl"]
[ext_resource type="Texture2D" uid="uid://b8foyj47mgnqg" path="res://asset/2d/ui/pause/pets/locked_name.png" id="2_ar40t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ewgro"]
atlas = ExtResource("1_52on1")
region = Rect2(0, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg6sm"]
atlas = ExtResource("1_52on1")
region = Rect2(127, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6xsg"]
atlas = ExtResource("1_52on1")
region = Rect2(254, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdbne"]
atlas = ExtResource("1_52on1")
region = Rect2(381, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_crw7c"]
atlas = ExtResource("1_52on1")
region = Rect2(508, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_wehpf"]
atlas = ExtResource("1_52on1")
region = Rect2(635, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_diyyu"]
atlas = ExtResource("1_52on1")
region = Rect2(762, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jdfl"]
atlas = ExtResource("1_52on1")
region = Rect2(889, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_kosus"]
atlas = ExtResource("1_52on1")
region = Rect2(1016, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpqjd"]
atlas = ExtResource("1_52on1")
region = Rect2(1143, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_3byfo"]
atlas = ExtResource("1_52on1")
region = Rect2(1270, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgatw"]
atlas = ExtResource("1_52on1")
region = Rect2(1397, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_icdai"]
atlas = ExtResource("1_52on1")
region = Rect2(1524, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5g6s"]
atlas = ExtResource("1_52on1")
region = Rect2(1651, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjbjv"]
atlas = ExtResource("1_52on1")
region = Rect2(1778, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ewyu"]
atlas = ExtResource("1_52on1")
region = Rect2(1905, 0, 127, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_asie7"]
atlas = ExtResource("1_52on1")
region = Rect2(2032, 0, 127, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_jpyn6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewgro")
}],
"loop": true,
"name": &"RESET",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg6sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6xsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdbne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crw7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wehpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diyyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jdfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kosus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpqjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3byfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgatw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icdai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5g6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjbjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ewyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asie7")
}],
"loop": true,
"name": &"focus",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_qdwr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PetIcon:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PetName:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3o5bx"]
resource_name = "focus"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, -2), Vector2(1, -2), Vector2(2, -2), Vector2(2, -1), Vector2(2, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PetIcon:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PetName:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mboe7"]
_data = {
"RESET": SubResource("Animation_qdwr6"),
"focus": SubResource("Animation_3o5bx")
}

[node name="PetButton" type="Marker2D"]
script = ExtResource("1_heebl")

[node name="ButtonFace" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_jpyn6")
animation = &"RESET"
centered = false

[node name="PetIcon" type="Sprite2D" parent="ButtonFace"]
texture_filter = 1
position = Vector2(29, 13)
hframes = 2

[node name="PetName" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(91, 24)
texture = ExtResource("2_ar40t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ButtonFace")
libraries = {
"": SubResource("AnimationLibrary_mboe7")
}
